<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".MainActivity2_Nivel2">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/app_name"
        android:gravity="start"
        android:text="@string/jugador_nombre"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/app_name"
        android:gravity="start"
        android:text="@string/total_score"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView_manzanas"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        android:gravity="start"
        android:text="@string/et_vidas"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="78dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="left"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageView_num1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="111dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/imageView_num2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber_resultado"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_toStartOf="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/boton_sumar"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>